# Kanzen

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  extract-icon.ps1  generate-icon.ps1  generate-png.ps1  icon.icns
src-tauri/src/: git.rs  main.rs  pty.rs
src/components/: CockpitBar.tsx  CustomTitleBar.tsx  DiffViewer.tsx  FileRow.tsx  KanzenTerminal.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx
src/lib/: changelog.ts  store.ts  types.ts  utils.ts
src/views/: ChangesView.tsx  SettingsView.tsx  TerminalView.tsx
